--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    //RxAndroid
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex:rxjava:1.0.14'
+    //Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
 }
